# myhack-hackathon-2026

./: AGENTS.md  CLAUDE.md  CONVENTIONS.md  PLAN.md  README.md  main.py  package-lock.json  package.json  tsconfig.tsbuildinfo
apps/backend/: .env.example  .gitignore  middleware.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  types.ts
apps/backend/lib/: firestore-store.ts  gemini.ts  get-store.ts  prompts.ts  store.ts  stub-store.ts
apps/backend_py/: .gitignore  BACKEND_CONVENTIONS.md  main.py  models.py  pyproject.toml
apps/backend_py/routers/: auth.py  linkages.py  seed.py  startups.py
apps/backend_py/services/: gemini.py
apps/backend_py/tests/: test_api_smoke.py
apps/frontend/: .env.development  .env.example  .gitignore
apps/frontend/src/: types.ts
apps/frontend/wireframe/: results.html  startup.html
backend/: .env.example  BACKEND_CONVENTIONS.md  CLAUDE.md  dependencies.py  main.py  models.py  prompts.py  pyproject.toml  seed.py
backend/routers/: linkages.py  matches.py  partners.py  startups.py
backend/services/: firestore.py  firestore_store.py  store.py  stub_store.py
frontend/: .gitignore  FRONTEND_CONVENTIONS.md  firebase.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/hooks/: useLinkages.ts
frontend/src/pages/: ActorPicker.tsx
frontend/src/services/: api.ts  stubs.ts
frontend/wireframe/: admin.html  index.html  partner-corporate.html  partner-investor.html  partner-service.html  partner-submit.js  partner.html  staff-login.html  styles.css
(+21 files in other folders)
